[gd_scene load_steps=2 format=3 uid="uid://rnrl673y57qk"]

[ext_resource type="Script" path="res://scripts/meteor_spawner.gd" id="1_w3qvd"]

[node name="MeteorSpawner" type="Node2D"]
script = ExtResource("1_w3qvd")

[node name="SpawnPoints" type="Node" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(125, -66)

[node name="Marker2D2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(412, -63)

[node name="Marker2D3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(778, -72)

[node name="Marker2D4" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1090, 98)

[node name="Marker2D5" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1099, 335)

[node name="Marker2D6" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1093, 568)

[node name="Marker2D7" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1102, 725)

[node name="Marker2D8" type="Marker2D" parent="SpawnPoints"]
position = Vector2(821, 882)

[node name="Marker2D9" type="Marker2D" parent="SpawnPoints"]
position = Vector2(499, 842)

[node name="Marker2D10" type="Marker2D" parent="SpawnPoints"]
position = Vector2(149, 847)

[node name="Marker2D11" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-100, 594)

[node name="Marker2D12" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-117, 430)

[node name="Marker2D13" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-116, 234)

[node name="Marker2D14" type="Marker2D" parent="SpawnPoints"]
position = Vector2(-88, 108)

[node name="Meteors" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
